2010-11-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-last-response-string): Remove the unfolding -- it
	introduces regressions in article selection.

2010-11-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-called-interactively-p): A temporary macro.
	(message-goto-body): Use it temporarily.

2010-11-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-unfold-quoted-lines): Refactor out.
	(nnimap-last-response-string): Unfold quoted lines, if they exist.
	(nnimap-last-response-string): Fix last unfolding fix.

2010-11-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-insert): Fix the way to fold lines.

2010-11-25  Julien Danjou  <julien@danjou.info>

	* shr-color.el (shr-color->hexadecimal): Use color-rgb->hex

	* color.el: Rename from color-lab.el
	(color-rgb->hex): Add.
	(color-complement): Add.
	(color-complement-hex): Add.

	* gnus-sum.el (gnus-summary-widget-forward): Add, and bind to [tab].

2010-11-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr-color.el (shr-color-visible): Don't bug out if the colour names
	don't exist.

2010-11-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml.el (mml-preview): Make sure to bind gnus-displaying-mime to nil,
	assuming that article displaying or another mml-preview may be
	interrupted for an error or for the like.

	* shr.el (shr-get-background): Fix argument name.

2010-11-24  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-cache.el (gnus-summary-insert-cached-articles): Use it.

	* gnus-sum.el (gnus-summary-include-articles): New function.

	* message.el (message-goto-body): called-interactively-p needs a
	parameter, so use `any'.

	* nnimap.el (nnimap-request-move-article): It's no longer necessary to
	clear marks before moving, since they're synced from the Gnus side
	first.

	* gnus-sum.el (gnus-summary-push-marks-to-backend): New function.
	(gnus-summary-move-article): Copy over all marks before moving, so that